[package]
name = "solana_program_security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.3.1"
solana-program = "1.18.1"


[lib]
name = "solanaprogramsecurity" 
crate-type = ["cdylib", "lib"]

